<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".OffreActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/confirm_offre_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/offres_title"
            android:textSize="18dp" />


    </LinearLayout>

    <TextView
        android:id="@+id/confirm_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/candidatures_confirm_delete"
        android:layout_marginVertical="100dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/confirm_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/candidatures_yes"
            android:layout_gravity="center"
            android:layout_marginEnd="25dp"/>

        <Button
            android:id="@+id/confirm_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/candidatures_no"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"/>
    </LinearLayout>
</LinearLayout>